# Multi-Drone-Wind-Turbine-Coverage

./: .gitignore  CentralPlanner.sh  PegasusConfig  Pegasus_sim_launch.py  README.md  UAVSystemLaunch.sh  all_geoposes_wind_turbine.json  multi_launch_drones.sh  parallel.sh  px4_multi_vehicle.py
ros2_ws/src/central_ground_coverage_controller/: CMakeLists.txt  package.xml
ros2_ws/src/central_ground_coverage_controller/config/: config.toml
ros2_ws/src/central_ground_coverage_controller/include/: CentralCoverageControllerNode.h
ros2_ws/src/central_ground_coverage_controller/include/CentralGroundCoverageController/: CentralCoverageControllerNode.h  ConfigHeaderPath.h  CoverageLogReader.h  CoverageLogger.h  TimedCoveragePath.h  TimedCoverageViewpoint.h
ros2_ws/src/central_ground_coverage_controller/include/CentralGroundCoverageController/CoverageLibrary/: CoveragePathPlanner.h  CoveragePaths.h  CoverageViewpointLoader.h  GeneticAlgorithmCoveragePathPlanner.h  HaversineDistance.h
ros2_ws/src/central_ground_coverage_controller/include/CoverageLibrary/: CoveragePathPlanner.h  GoalCoverageViewpoints.h
ros2_ws/src/central_ground_coverage_controller/include/CoverageLibrary/GeneticAlgorithmLibrary/: FitnessCalculator.h
ros2_ws/src/central_ground_coverage_controller/include/GreedyIterativeCoveragePathPlanner/: CoveragePath.h  CoveragePathPlanner.h  CoveragePaths.h  CoverageViewpoint.h  CoverageViewpointLoader.h  GreedyIterativeCoveragePathPlanner.h  HaversineDistance.h
ros2_ws/src/central_ground_coverage_controller/src/: CentralCoverageController.cpp  CentralCoverageControllerNode.cpp  CoverageLogReader.cpp  CoverageLogger.cpp  TimedCoveragePath.cpp  TimedCoverageViewpoint.cpp
ros2_ws/src/central_ground_coverage_controller/test/: CentralCoverageControllerNode.cc  TimedCoveragePathTest.cc
ros2_ws/src/offboard_control/: CMakeLists.txt  package.xml
ros2_ws/src/offboard_control/include/: CoverageModes.h  CoverageViewpoint.h  CoverageViewpointLoader.h  DecentralisedCoverageNode.h  OffboardNode.h  Pose.h  Takeoff.h
ros2_ws/src/offboard_control/src/: CoverageViewpointLoader.cpp  DecentralisedCoverageNode.cpp  OffboardNode.cpp  Takeoff.cpp
utility_libraries/coverage_library/: CMakeLists.txt
utility_libraries/coverage_library/include/: CoveragePath.h  CoveragePathPlanner.h  CoverageViewpoint.h  GoalCoverageViewpoints.h  GreedyIterativeCoveragePathPlanner.h  HaversineDistance.h  Path.h
utility_libraries/coverage_library/include/CoverageLibrary/: CoveragePathPlanner.h  CoveragePathPlannerLogger.h  CoveragePaths.h  CoverageViewpoint.h  GoalCoverageViewpoints.h  GreedyIterativeCoveragePathPlanner.h  LogDistanceCostMatrixPlanner.h  Pose.h
utility_libraries/coverage_library/include/CoverageLibrary/GeneticAlgorithmLibrary/: ConfigHeaderPath.h  FitnessCalculator.h  ParthenoGeneticAlgorithm.h  PopulationInitialiser.h  Position.h  Reproducer.h
utility_libraries/coverage_library/include/CoverageLibrary/GeneticAlgorithmLibrary/FitnessFunction/: DistanceFitnessFunction.h  FitnessFunction.h  (+1 more)
utility_libraries/coverage_library/src/: CoverageLogger.cpp  CoveragePath.cpp  CoveragePathPlanner.cpp  CoveragePaths.cpp  GeneticAlgorithmCoveragePathPlanner.cpp  GoalCoverageViewpoints.cpp  GreedyIterativeCoveragePathPlanner.cpp  HaversineDistance.cpp  LogDistanceCostMatrixPlanner.cpp  Path.cpp  main.cpp
utility_libraries/coverage_library/test/: CoveragePathTest.cc  GreedyIterativeCoveragePathPlanner.cc  HaversineDistanceTest.cc
utility_libraries/genetic_algorithm_library/: CMakeLists.txt
utility_libraries/genetic_algorithm_library/config/: config.toml
utility_libraries/genetic_algorithm_library/include/GeneticAlgorithmLibrary/: Chromosome.h  ConfigHeaderPath.h  FitnessCalculator.h  HaversineDistance.h  ParthenoGeneticAlgorithm.h  ParthenoGeneticAlgorithmConfig.h  Population.h  PopulationInitialiser.h  ProblemLogUtility.h  Reproducer.h  Terminator.h
utility_libraries/genetic_algorithm_library/include/GeneticAlgorithmLibrary/FitnessFunction/: DistanceFitnessFunction.h  FitnessFunction.h  Fitnesses.h  MultiDistanceFitnessFunction.h  MultiDistanceHorizontalFitnessFunction.h
utility_libraries/genetic_algorithm_library/include/GeneticAlgorithmLibrary/ReproductionMechanism/: IPGAHorizontalReproductionMechanism.h  IPGAReproductionMechanism.h  IPGARouletteReproductionMechanism.h  IPGATournamentReproductionMechanism.h  NSGAIIPMXReproductionMechanism.h  NSGAIIReproductionMechanism.h  NSGAIIReproductionMechanismHorizontal.h  NSGAIIReproductionMechanismShuai.h  NSGAIIReproductionMechanismShuaiHorizontal.h  NSGAIIReproductionMechanismShuaiHorizontalFocused.h  ReproductionMechanism.h
utility_libraries/genetic_algorithm_library/include/GeneticAlgorithmLibrary/TerminationCriterion/: IterationCountTerminationCriterion.h  TerminationCriterion.h
utility_libraries/genetic_algorithm_library/src/: Chromosome.cpp  ChromosomeBuilder.cpp  FitnessCalculator.cpp  HaversineDistance.cpp  ParthenoGeneticAlgorithm.cpp  Population.cpp  PopulationInitialiser.cpp  ProblemLogUtility.cpp  Reproducer.cpp  Terminator.cpp  cost_maps.txt  main.cpp
utility_libraries/genetic_algorithm_library/src/EncodingMechanism/: SequenceEncodingMechanism.cpp
utility_libraries/genetic_algorithm_library/src/FitnessFunction/: DistanceFitnessFunction.cpp  MultiDistanceFitnessFunction.cpp  MultiDistanceHorizontalFitnessFunction.cpp  log.txt
utility_libraries/genetic_algorithm_library/src/ReproductionMechanism/: IPGAElitismReproductionMechanism.cpp  IPGAHorizontalReproductionMechanism.cpp  IPGAReproductionMechanism.cpp  IPGARouletteReproductionMechanism.cpp  IPGATournamentReproductionMechanism.cpp  NSGAIIPMXReproductionMechanism.cpp  NSGAIIReproductionMechanism.cpp  NSGAIIReproductionMechanismHorizontal.cpp  NSGAIIReproductionMechanismShuai.cpp  NSGAIIReproductionMechanismShuaiHorizontal.cpp  NSGAIIReproductionMechanismShuaiHorizontalFocused.cpp
utility_libraries/genetic_algorithm_library/src/TerminationCriterion/: IterationCountTerminationCriterion.cpp
utility_libraries/genetic_algorithm_library/test/: DistanceFitnessFunction.cc
(+47 files in other folders)
